<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	
	<PreferenceCategory
		android:title="@string/profile">
		<ListPreference
			android:key="profile"
			android:title="@string/profile"/>
		<Preference
			android:key="prof_add_btn"
			android:title="@string/prof_add"/>
		<Preference
			android:key="prof_del_btn"
			android:title="@string/prof_del"/>
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/connection">
		
		<EditTextPreference
			android:key="server_ip"
			android:title="@string/server_ip"
			android:singleLine="true"/>
		
		<EditTextPreference
			android:key="server_port"
			android:title="@string/server_port"
			android:inputType="number"
			android:singleLine="true"/>
		
		<CheckBoxPreference
			android:key="ipv6_proxy"
			android:title="@string/ipv6_proxy"
			android:summary="@string/ipv6_proxy_sum"/>
		
		<CheckBoxPreference
			android:key="udp_proxy"
			android:title="@string/udp_proxy"
			android:summary="@string/udp_proxy_sum"/>
		
		<EditTextPreference
			android:key="udp_gw"
			android:title="@string/udp_gw"
			android:singleLine="true"
			android:dependency="udp_proxy"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/authentication">
		
		<CheckBoxPreference
			android:key="auth_userpw"
			android:title="@string/auth_userpw"
			android:defaultValue="false"/>
		
		<EditTextPreference
			android:key="auth_username"
			android:title="@string/auth_username"
			android:dependency="auth_userpw"
			android:singleLine="true"/>
		
		<EditTextPreference
			android:key="auth_password"
			android:title="@string/auth_password"
			android:inputType="textPassword"
			android:dependency="auth_userpw"
			android:singleLine="true"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/advanced">
		
		<ListPreference
			android:key="adv_route"
			android:title="@string/adv_route"
			android:entries="@array/adv_routes"
			android:entryValues="@array/adv_routes_values"/>
		
		<ListPreference
			android:key="adv_dns_presets"
			android:title="@string/adv_dns_presets"
			android:entries="@array/dns_preset_names"
			android:entryValues="@array/dns_preset_values"/>
			
		<EditTextPreference
			android:key="adv_dns"
			android:title="@string/adv_dns"
			android:singleLine="true"/>
		
		<EditTextPreference
			android:key="adv_dns_port"
			android:title="@string/adv_dns_port"
			android:inputType="number"
			android:singleLine="true"/>
		
		<CheckBoxPreference
			android:key="adv_auto_connect"
			android:title="@string/adv_auto_connect"/>
		
		<CheckBoxPreference
			android:key="adv_per_app"
			android:title="@string/adv_per_app"/>
		
		<CheckBoxPreference
			android:key="adv_app_bypass"
			android:title="@string/adv_app_bypass"
			android:summary="@string/adv_app_bypass_sum"
			android:dependency="adv_per_app"/>
		
		<Preference
			android:key="adv_app_selector"
			android:title="@string/adv_app_selector"
			android:summary="@string/adv_app_selector_sum"
			android:dependency="adv_per_app"/>

		<EditTextPreference
			android:key="adv_app_list"
			android:title="@string/adv_app_list"
			android:summary="@string/adv_app_list_sum"
			android:dependency="adv_per_app"/>
		
		<CheckBoxPreference
			android:key="dynamic_colors"
			android:title="@string/dynamic_colors"
			android:summary="@string/dynamic_colors_sum"
			android:defaultValue="true"/>
		
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/appearance">
		<ListPreference
			android:key="theme_mode"
			android:title="@string/theme_mode"
			android:entries="@array/theme_modes"
			android:entryValues="@array/theme_mode_values"
			android:defaultValue="light"
			android:summary="%s"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/proxy_settings">
		<CheckBoxPreference
			android:key="connectivity_check"
			android:title="@string/connectivity_check"
			android:summary="@string/connectivity_check_sum"
			android:defaultValue="true"/>
		<CheckBoxPreference
			android:key="auto_stop"
			android:title="@string/auto_stop"
			android:summary="@string/auto_stop_sum"
			android:defaultValue="false"/>
	</PreferenceCategory>

</PreferenceScreen>
